[package]
name = "grug-rs"
version = "0.3.1"
edition = "2024"
description = "Safe bindings for https://github.com/grug-lang/grug"
license = "MIT"
repository = "https://github.com/lemonlambda/grug-rs"

[dependencies]
grug-rs-proc-macro = "0.1"
grug-sys = "0.1"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
seq-macro = "0.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "1.0.100"

